# EquityWise

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  EquityWise_Plan.md  LICENSE  MANIFEST.in  README.md  USER_GUIDE.md  pyproject.toml
data/: README.md
data/reference_data/: README.md
data/reference_data/adobe_stock/: HistoricalData_1756011612969.csv  README.md
data/reference_data/exchange_rates/: Exchange_Reference_Rates.csv  README.md  SBI_REFERENCE_RATES_USD.csv
data/reference_data/templates/: README.md
data/user_data/: README.md
data/user_data/bank_statements/: README.md
data/user_data/benefit_history/: README.md
data/user_data/gl_statements/: README.md
data/user_data/rsu_documents/: README.md
docs/: BANK_PATTERNS.md  CAPITAL_GAINS.md  README.md
scripts/: update_reference_data.py
src/equitywise/: __init__.py  main.py
src/equitywise/calculators/: fa_calculator.py  fa_service.py  rsu_calculator.py  rsu_service.py
src/equitywise/config/: __init__.py  settings.py
src/equitywise/data/: esop_parser.py  excel_utils.py  loaders.py  models.py  rsu_parser.py
src/equitywise/reports/: __init__.py  csv_reporter.py  excel_reporter.py
src/equitywise/utils/: __init__.py  currency_utils.py  date_utils.py
src/equitywise/validation/: __init__.py  cross_validator.py
src/rsu_fa_tool/: main.py
src/rsu_fa_tool/calculators/: __init__.py  fa_service.py
src/rsu_fa_tool/config/: settings.py
src/rsu_fa_tool/data/: loaders.py  models.py  validators.py
tests/: README.md  run_all_tests.py  test_bank_statement_loader.py  test_basic.py  test_broker_detection.py  test_comprehensive_data_models.py  test_comprehensive_fa_calculator.py  test_comprehensive_rsu_calculator.py  test_data_file_guidance.py  test_espp_parsing.py  test_fa_calculator.py  test_fa_reporters.py  test_generate_reports_command.py  test_golden_hand_verified.py  test_master_suite.py  test_phase2_data_loading.py  test_reference_data_updater.py  test_rsu_calculator.py  test_rsu_statement_parser.py  test_settings.py
